@@ -326,8 +326,7 @@ void pqxx::pipeline::obtain_dummy()
   unregister_me();
   try
   {
-    do
-    {
+    do {
       m_num_waiting--;
       auto const query{*m_issuedrange.first->second.query};
       auto &holder{m_issuedrange.first->second};
